--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       DB_NAME: postgres
       DB_USER: postgres
       DB_PASSWORD: example
-
+      REDIS_HOST: redis
   db:
     image: postgres:13
     environment:
@@ -22,6 +22,10 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - db-data:/var/lib/postgresql/data
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
 
 volumes:
   db-data:
