--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
     environment:
       DB_HOST: db
       DB_PORT: 5432
@@ -24,8 +25,6 @@ services:
       - db-data:/var/lib/postgresql/data
   redis:
     image: redis:latest
-    ports:
-      - "6379:6379"
 
 volumes:
   db-data:
